Fixed background
might be broken in resources but i had to go

--- a/uni.css
+++ b/uni.css
@@ -2,6 +2,8 @@ html, body, .content { height: 100%; width: 100%; margin: 0; }
 
 body {
   background-color: #040b10;
+  height: 100vh;
+  width: 100vw;
 }
 
 #headerImg {
@@ -51,13 +53,16 @@ body {
   position: absolute;
 }
 
-.scrollingBackdrop {
+#backdropContainer {
   height: 100%;
   width: 100%;
-  opacity: 10%;
-  position: absolute;
+  position: fixed;
+  background-size: 100% 100%;
+  background-image: url("backdrop.gif");
+  opacity: 0.1;
   z-index: -1;
 }
+
 
 #headerText {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -84,4 +89,10 @@ body {
 #homeLink {
   color: #9ba8b1;
   text-decoration: none;
+}
+
+footer {
+  background-color: #040b10;
+  width: 100%;
+  height: 30px;
 }
